update css to fit correctly on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,7 @@
   --desc-bg: green;
   --selected:black;
   --ecm-log-bg:gray;
+  --input-bg:rgb(242, 242, 242);
 }
 
 body{
@@ -108,8 +109,8 @@ nav{
     right: 0;
     justify-content: flex-end;
     align-items: center;
-  
-    border-radius: 30px;
+    min-height: 10%;
+    border-radius: 10px;
   }
 
 
@@ -250,10 +251,12 @@ nav{
 /*******************************************/
 input{
   display: inline-block;
-  border: 1px red solid;
+  background-color: var(--input-bg);
   font-size: 1.1rem;
   text-align: center;
   max-width: 100%;
+  border-radius: 10px;
+  box-shadow: 2px 2px 2px black ;
 }
 textarea{
   width: 70%;
@@ -318,3 +321,25 @@ label{
 
 
 
+
+/* loading spinner */
+  .loading {
+    
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  .hidden{
+    visibility:hidden;
+    width: 0;
+    height: 0;
+  }
